--- a/_posts/2018-12-25-SecNotes.md
+++ b/_posts/2018-12-25-SecNotes.md
@@ -69,6 +69,9 @@ While logging in with this username is unsuccesful. A similar method from anothe
 
 After creating a user with the username `username' OR 1=1#`, logging in with this account allows for every note to be read. This suggests that the vulnerable SQL query is used during the login process only when an account already exists in the database.
 
+![all_notes.png](/assets/images/htb/secnotes/all_notes.png)
+
+
 The "Mimi's Sticky Buns" note contains a recipe for some delicious sounding sticky buns. The "Years" note contains the contents shown below:
 
 ```
