--- a/_posts/2018-12-25-SecNotes.md
+++ b/_posts/2018-12-25-SecNotes.md
@@ -93,7 +93,7 @@ The `iisstart.htm` and `iisstart.png` files along with the share name `new-site`
 
 Additionally, remote files can be written to the SMB share with the SMB `put` command once connected.
 
-It has been noted that the webserver running on port 80 is Microsoft IIS and that it executes PHP code. As the service on port 8808 is also Microsoft IIS and is running on the same system, it is likely that it also will execute PHP code. To test this, a `hmm.php` can be created and transferred to the target system. The contents of `hmm.php` are shown below.
+It has been noted that the webserver running on port 80 is Microsoft IIS and that it executes PHP code. As the service on port 8808 is also Microsoft IIS and is running on the same system, it is likely that it also will execute PHP code. To test this, a `hmm.php` file can be created and transferred to the target system. The contents of `hmm.php` are shown below.
 
 ```php
 <?php system("dir");?>
@@ -140,8 +140,53 @@ Once `catch.php` has been transferred to the `new-site` SMB share and steps one 
 
 ![catch_php.gif](/assets/images/htb/secnotes/catch_php.gif)
 
-The user flag can now be read.
+The `user.txt` flag can now be read.
 
 ![user_txt.png](/assets/images/htb/secnotes/user_txt.png)
 
 ## Root
+Beginning enumeration of the system with the goal of elevating privleges, the situation quickly becomes interesting. In the `C:\` directory, there are a couple of odd items; a `Distros` directory and a `Ubuntu.zip` file. As this is a Windows system, it's odd that a there are multiple references to `Ubuntu`.
+
+![wsl.png](/assets/images/htb/secnotes/wsl.png)
+
+After a little research, it is apparent that this system is utilizing the Windows Subsystem for Linux. The Windows Subsystem for Linux is a compatability layer for running Linux binaries natively on Windows 10 and Windows Server 2019. 
+
+This implies that there are Linux files present on this system alongside Windows files. In WSL, the familiar Linux directory structure is rooted in a `rootfs` directory.
+
+The Windows command `/dir rootfs /a /s /p` can be run on the compromised system with the hopes of finding where the `rootfs` resides. The results of the command are shown below.
+
+![dir_rootfs.png](/assets/images/htb/secnotes/dir_rootfs.png)
+
+Within that monstrosity of a path, the `rootfs` directory lives. Within the `rootfs` directory are the expected Linux-esque directories such as `bin`, `var`, `usr`, and `root`.
+
+Within the `rootfs/root` directory, there is a familiar `.bash_history` file. The commands present in the `.bash_history` file are commands used to set up and test the SMB share running on the target system. An exmaple of these commands are shown below.
+
+```
+...
+sudo apt install cifs-utils
+mount //127.0.0.1/c$ filesystem/
+mount //127.0.0.1/c$ filesystem/ -o user=administrator
+cat /proc/filesystems
+sudo modprobe cifs
+smbclient
+apt install smbclient
+smbclient
+smbclient -U 'administrator%u6!4ZwgwOM#^OBf#Nwnh' \\\\127.0.0.1\\c$
+...
+```
+
+The last line of output shown above appears to include the Administrator user's password!
+
+Back on the attacking system, the Impacket `smbexec.py` can be used along with the newly found credentials to get a shell `SYSTEM` shell on the target. The command to accomplish this is shown below.
+
+```
+root@kali:~/workspace/hackthebox/SecNotes# python /usr/local/bin/smbexec.py administrator:u6\!4ZwgwOM#^OBf#Nwnh
+```
+
+Note that a `\` is required before the `!` in the Administrator's password to escape the character. The result of the command is shown below.
+
+![smbexec.png](/assets/images/htb/secnotes/smbexec.png)
+
+From this position, the `root.txt` flag can be read.
+
+![root_txt.png](/assets/images/htb/secnotes/root_txt.png)
