--- a/_posts/2018-12-25-SecNotes.md
+++ b/_posts/2018-12-25-SecNotes.md
@@ -2,7 +2,7 @@
 title: "HTB Write-up: SecNotes"
 date: 2018-12-25
 category: [HackTheBox]
-tags: [HackTheBox, HTB, windows, ]
+tags: [HackTheBox, HTB, windows, PHP, SMB, SQL injection, WSL, smbexec.py]
 header:
     teaser: "/assets/images/htb/secnotes/secnotes.png"
 ---
