--- a/_posts/2018-12-25-SecNotes.md
+++ b/_posts/2018-12-25-SecNotes.md
@@ -65,7 +65,7 @@ Moving back to the login page, basic SQL injection can be tested. If user data i
 username' OR 1=1#
 ```
 
-While logging in with this username is unsuccesful. A similar method from another HackTheBox machine, Nightmare, can be attempted. This method involves creating a user with the SQL injection string before attempting to login.
+While logging in with this username is unsuccesful. A similar method from another HackTheBox machine, Nightmare, can be attempted. This method involves creating a user with the SQL injection string before attempting to login. This is known as a second order SQL injection.
 
 After creating a user with the username `username' OR 1=1#`, logging in with this account allows for every note to be read. This suggests that the vulnerable SQL query is used during the login process only when an account already exists in the database.
 
