--- a/_posts/2018-12-22-Curling.md
+++ b/_posts/2018-12-22-Curling.md
@@ -75,7 +75,7 @@ From the home page, it appears that the informational posts have been written by
 
 ![post_example.png](/assets/images/htb/curling/post_example.png)
 
-Using the string from above as a password and usernames such as "admin", "administrator", and "floris" attempts were made to log in using the log in form on the home page, but to no avail.
+Using the string from `secret.txt` as a password and usernames such as "admin", "administrator", and "floris", attempts were made to log in using the log in form on the home page, but to no avail.
 
 Further examining the text within the `secret.txt` file suggests that it could be a base64 encoded string. To test this theory, the `Q3VybGluZzIwMTgh` string was saved to a local `secret.txt` file on the attacking system and was then base64 decoded, revealing the `Curling2018!` string.
 
