--- a/_posts/2018-12-22-Curling.md
+++ b/_posts/2018-12-22-Curling.md
@@ -344,6 +344,7 @@ This process is shown below.
 
 ![root_pwn.gif](/assets/images/htb/curling/root_pwn.gif)
 
+The `root.txt` flag can now be read.
 
 ```
 root@curling:~# cat root.txt 
