added tags for curling

--- a/_posts/2018-12-22-Curling.md
+++ b/_posts/2018-12-22-Curling.md
@@ -2,7 +2,7 @@
 title: "HTB Write-up: Curling"
 date: 2018-12-18
 category: [HackTheBox]
-tags: [HackTheBox, HTB, ]
+tags: [HackTheBox, HTB, Joomla, gobuster, base64, PHP, xxd, bzip, gzip, tar, curl]
 header:
     teaser: "/assets/images/htb/curling/curling.png"
 ---
