--- a/_posts/2018-12-22-Curling.md
+++ b/_posts/2018-12-22-Curling.md
@@ -10,6 +10,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 ![curling_info.png](/assets/images/htb/curling/curling_info.png)
 
+*Note: I completed this challenge on December 19th, 2018, however I'm just now writing it up in December 2019. As such, some of the details are sparse.*
+
 ## User
 To begin enumeration, the `masscan` tool was used to scan the target system for open ports. 
 
