--- a/_posts/2018-12-25-SecNotes.md
+++ b/_posts/2018-12-25-SecNotes.md
@@ -6,7 +6,12 @@ tags: [HackTheBox, HTB, windows, PHP, SMB, SQL injection, WSL, smbexec.py]
 header:
     teaser: "/assets/images/htb/secnotes/secnotes.png"
 ---
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+SecNotes is a medium-difficulty Windows machine with a twist. The machine includes a web application where users can store "secure" notes, (hence the machine name of "SecNotes"). Unfortunately, the web application is not as secure as the machine name might suggest as it is vulnerable to second order SQL injection and a variety of other issues. The simple second order SQLi can be leveraged to access all of the "secure" notes on the system. The information in these notes leads to the compromise of the system as the user `Tyler`.The route to owning the system includes a splash of Linux, as the Windows Subsystem for Linux is in use on the machine. Beware of `.bash_history`.
+
+The quote for SecNotes is:
+
+>"Do. Or do not. There is no try."
+>-Yoda
 
 ![secnotes_info.png](/assets/images/htb/secnotes/secnotes_info.png)
 
