--- a/_posts/2018-12-25-SecNotes.md
+++ b/_posts/2018-12-25-SecNotes.md
@@ -8,12 +8,10 @@ header:
 ---
 SecNotes is a medium-difficulty Windows machine with a twist. The machine includes a web application where users can store "secure" notes, (hence the machine name of "SecNotes"). Unfortunately, the web application is not as secure as the machine name might suggest as it is vulnerable to second order SQL injection and a variety of other issues. The simple second order SQLi can be leveraged to access all of the "secure" notes on the system. The information in these notes leads to the compromise of the system as the user `Tyler`.The route to owning the system includes a splash of Linux, as the Windows Subsystem for Linux is in use on the machine. Beware of `.bash_history`.
 
-The quote for SecNotes is:
-
->"Do. Or do not. There is no try."
->-Yoda
-
 ![secnotes_info.png](/assets/images/htb/secnotes/secnotes_info.png)
+
+>"Do. Or do not. There is no try."\n
+>-Yoda
 
 *Note: I completed this challenge on December 25th, 2018, however I'm just now writing it up in December 2019. As such, some of the details are sparse.*
 
