--- a/_posts/2018-12-25-SecNotes.md
+++ b/_posts/2018-12-25-SecNotes.md
@@ -10,7 +10,8 @@ SecNotes is a medium-difficulty Windows machine with a twist. The machine includ
 
 ![secnotes_info.png](/assets/images/htb/secnotes/secnotes_info.png)
 
->"Do. Or do not. There is no try."\n
+>"Do. Or do not. There is no try."
+
 >-Yoda
 
 *Note: I completed this challenge on December 25th, 2018, however I'm just now writing it up in December 2019. As such, some of the details are sparse.*
