--- a/_posts/2018-12-19-Access.md
+++ b/_posts/2018-12-19-Access.md
@@ -12,7 +12,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 *Note: I completed this challenge on December 19th, 2018, however I'm just now writing it up in December 2019. As such, some of the details are sparse.*
 
-## User
+### User
 To begin the enumeration process, a port scan was run against the target using `masscan`. The purpose of this initial scan is to quickly determine which ports are open so that a more focused `nmap` scan can be performed that will target only the open ports discovered by `masscan`.
 
 ```
@@ -86,7 +86,7 @@ The username `security` with the password `4Cc3ssC0ntr0ller` can be used to log 
 
 ![user_txt.png](/assets/images/htb/access/user_txt.png)
 
-## Root
+### Root
 While running through the usual privelege escalation enumeration commands, something stood out as odd. After running the `net users administrator` command, it was revealed that the "Password Not Required" property has been set for the Administrator user. This means that the Administrator user is allowed passwordless logon to the system.
 
 ![net_user.png](/assets/images/htb/access/net_user.png)
