--- a/_posts/2018-12-22-Curling.md
+++ b/_posts/2018-12-22-Curling.md
@@ -12,7 +12,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 *Note: I completed this challenge on December 19th, 2018, however I'm just now writing it up in December 2019. As such, some of the details are sparse.*
 
-## User
+### User
 To begin enumeration, the `masscan` tool was used to scan the target system for open ports. 
 
 ```
@@ -243,7 +243,7 @@ floris@curling:~$ cat user.txt
 65dd1df0<redacted>
 ```
 
-## Root
+### Root
 The path to privilege escalation can be seen in the output of the `ps waux | grep root` command. This command shows the processes on the system that are running as the `root` user.
 
 From the output of the `ps waux | grep root` command, there is a process running as root that is issuing the `curl` command shown below:
