--- a/_posts/2018-12-16-Irked.md
+++ b/_posts/2018-12-16-Irked.md
@@ -12,7 +12,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 *Note: I completed this challenge on December 16th, 2018, however I'm just now writing it up in December 2019. As such, some of the details are sparse.*
 
-### User
+## User
 To begin the enumeration process, a port scan was run against the target using `masscan`. The purpose of this initial scan is to quickly determine which ports are open so that a more focused `nmap` scan can be performed that will target only the open ports discovered by `masscan`.
 
 ```
@@ -107,7 +107,7 @@ Returning to the target system, the password shown above can be used to switch t
 
 ![user_txt.png](/assets/images/htb/irked/user_txt.png)
 
-### Root
+## Root
 With the password for `djmardov`, the target system can be accessed over SSH as the `djmardov` user. This provides for a cleaner experience as compared to the upgraded shell used up until this point.
 
 To begin searching for misconfigurations that could lead to the elevation of priveleges, a search of the file system using `find` can be performed with the purpose of locating files owned by the `root` user that have the `setuid` bit set.
