--- a/_posts/2018-12-25-SecNotes.md
+++ b/_posts/2018-12-25-SecNotes.md
@@ -12,7 +12,7 @@ SecNotes is a medium-difficulty Windows machine with a twist. The machine includ
 
 *Note: I completed this challenge on December 25th, 2018, however I'm just now writing it up in December 2019. As such, some of the details are sparse.*
 
-### User
+## User
 To begin the enumeration process, a port scan was run against the target using `masscan`. The purpose of this initial scan is to quickly determine which ports are open so that a more focused `nmap` scan can be performed that will target only the open ports discovered by `masscan`.
 
 ```
@@ -144,7 +144,7 @@ The `user.txt` flag can now be read.
 
 ![user_txt.png](/assets/images/htb/secnotes/user_txt.png)
 
-### Root
+## Root
 Beginning enumeration of the system with the goal of elevating privleges, the situation quickly becomes interesting. In the `C:\` directory, there are a couple of odd items; a `Distros` directory and a `Ubuntu.zip` file. As this is a Windows system, it's odd that a there are multiple references to `Ubuntu`.
 
 ![wsl.png](/assets/images/htb/secnotes/wsl.png)
