--- a/_posts/2018-12-22-Curling.md
+++ b/_posts/2018-12-22-Curling.md
@@ -6,7 +6,7 @@ tags: [HackTheBox, HTB, Joomla, gobuster, base64, PHP, xxd, bzip, gzip, tar, cur
 header:
     teaser: "/assets/images/htb/curling/curling.png"
 ---
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Curling is an easy-difficulty Linux box. The great thing about Curling is all of the small, simple steps that are required to complete it. The machine includes a website built by a content management system (CMS) called Joomla. The administrator of the website, Floris (who, judging by the content of the website is a devoted [curling](https://en.wikipedia.org/wiki/Curling) enthusiast), thought they were being tricky hiding important base64-encoded information in HTML code. Once this secret information has been leveraged to access the machine as the `floris` user, the hobby that Floris loves most (namely, [cURLing](https://en.wikipedia.org/wiki/CURL)) results in their timely demise...
 
 ![curling_info.png](/assets/images/htb/curling/curling_info.png)
 
