--- a/_posts/2018-12-22-Curling.md
+++ b/_posts/2018-12-22-Curling.md
@@ -342,7 +342,7 @@ output = "/root/.ssh/authorized_keys"
 
 After serving the SSH public key `id_rsa.pub` on the attacking system using `python -m SimpleHTTPServer 80`, the target system writes the contents of the attacking system's public SSH key to the target system's `/root/.ssh/authorized_keys` directory which allows the attacking system to SSH to the target system as `root`.
 
-This process is shown below.
+This process is shown below (note that the duration of one loop is ~30 seconds).
 
 ![root_pwn.gif](/assets/images/htb/curling/root_pwn.gif)
 
