--- a/_posts/2018-12-22-Curling.md
+++ b/_posts/2018-12-22-Curling.md
@@ -80,7 +80,7 @@ From the home page, it appears that the informational posts have been written by
 
 ![post_example.png](/assets/images/htb/curling/post_example.png)
 
-Using the string from `secret.txt` as a password and usernames such as "admin", "administrator", and "floris", attempts were made to log in using the log in form on the home page, but to no avail.
+Using the string from `secret.txt` as a password and usernames such as "admin", "administrator", and "floris", attempts were made to log in using the login form on the home page, but to no avail.
 
 Further examining the text within the `secret.txt` file suggests that it could be a base64 encoded string. To test this theory, the `Q3VybGluZzIwMTgh` string was saved to a local `secret.txt` file on the attacking system and was then base64 decoded, revealing the `Curling2018!` string.
 
@@ -89,7 +89,7 @@ root@kali:~/workspace/hackthebox/Curling# base64 -d secret.txt
 Curling2018!
 ```
 
-The username/password combination of `floris / Curling2018!` can be used to log in to the website. Posts can be made and the website can be modified, however this doesn't appear to provide much of advantage.
+The username/password combination of `floris` / `Curling2018!` can be used to log in to the website. Posts can be made and the website can be modified, however this doesn't appear to provide much of advantage.
 
 Looking at the results of the now complete `gobuster` scan, a variety of directories were returned.
 
@@ -116,13 +116,13 @@ As the `/administrator` directory sounds lucrative, the directory was visited wh
 
 ![joomla_login.png](/assets/images/htb/curling/joomla_login.png)
 
-Using the same credentials as before (`floris / Curling2018!`), the Joomla! administrator console can be accessed. From this console, there are a lot of possibilities. For example, users can be edited, templates can be modified, and extensions can be installed.
+Using the same credentials as before (`floris` / `Curling2018!`), the Joomla! administrator console can be accessed. From this console, there are a lot of possibilities. For example, users can be edited, templates can be modified, and extensions can be installed.
 
 ![joomla_tour.gif](/assets/images/htb/curling/joomla_tour.gif)
 
 From the sidebar under the "Configuration" header is the option to edit templates. Navigating to this page shows that the default "protostar" template is currently in use.
 
-![protostar_default.png](/assets/images/htb/curling/protostar_default.png)protostar_default.png
+![protostar_default.png](/assets/images/htb/curling/protostar_default.png)
 
 Clicking on the "Protostar" link under the "Template" column shown in the image above directs to a page that allows for the files included in the template to be edited. Also, this page shows that the templates include PHP files. 
 
@@ -342,7 +342,7 @@ output = "/root/.ssh/authorized_keys"
 
 After serving the SSH public key `id_rsa.pub` on the attacking system using `python -m SimpleHTTPServer 80`, the target system writes the contents of the attacking system's public SSH key to the target system's `/root/.ssh/authorized_keys` directory which allows the attacking system to SSH to the target system as `root`.
 
-This process is shown below (note that the duration of one loop is ~30 seconds).
+This process is shown below. The loop demonstrates starting Python's SimpleHTTPServer on the attacking system, editing the `input` file on the target system to interact with the attacking system, the target system requesting the attacking system's `id_rsa.pub` file, and finally accessing the target system as `root` over SSH. Note that the duration of one loop is ~30 seconds.
 
 ![root_pwn.gif](/assets/images/htb/curling/root_pwn.gif)
 
