--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -1,5 +1,5 @@
 ---
-title: "HTB Write-up: carrier"
+title: "HTB Write-up: Carrier"
 date: 2019-01-12
 category: [HackTheBox]
 tags: [HackTheBox, HTB, Linux, ]
