--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -115,7 +115,7 @@ The `error_codes.pdf` document contains a two column table that provides a descr
 
 From this table, `Error 45007` is due to an invalid or expired license while `Error 45009` reports that system credentials have not been set, and that the default `admin` user's password is that of the chassis serial number.
 
-Next, the `snmp_login` Metasploit module was used to attempt to login to the service.
+Next, the `snmp_login` Metasploit module was used to attempt to login to the SNMP service on UDP port 161.
 
 ![snmp_login.png](/assets/images/htb/carrier/snmp_login.png)
 
