--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -130,7 +130,7 @@ msf5 auxiliary(scanner/snmp/snmp_login) > run
 [*] Auxiliary module execution completed
 ```
 
-This confirms that the SNMP service on UDP 161 is using the default `public` community, and that the service allows `read-write` access over the `public` community string.
+This confirms that the SNMP service on UDP 161 is using the default `public` community, and that `read-write` permissions are set for the `public` community.
 
 Further enumerating SNMP with the `snmpwalk` tool reveals the following information:
 
