--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -142,7 +142,7 @@ End of MIB
 
 The `STRING: "SN#NET_45JDX23` output suggets a possible chassis serial number that could be the `admin` user's default password, as previously mentioned in the `error_codes.pdf` document.
 
-Moving focus back to the Lyghtspeed login page, the application can be successfully authenticated to using the username/password combination of `admin` / `NET_45JDX23`. Once logged in, access to the dashboard, Lyghtspeed ticketing system, and diagnostics panel is granted.
+Moving focus back to the Lyghtspeed login page, the web application can be successfully authenticated to using the username/password combination of `admin` / `NET_45JDX23`. Once logged in, access to the dashboard, Lyghtspeed ticketing system, and diagnostics panel is granted.
 
 ![authenticated.gif](/assets/images/htb/carrier/authenticated.gif)
 
