--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -149,7 +149,13 @@ Moving focus back to the Lyghtspeed login page, the web application can be succe
 There are a couple of interesting things to note here. First, taking a closer look at the notes accessible from the "Tickets" page reveals some potentially useful information. The content of the juciest note is shown below.
 
 ```
-Rx / CastCom. IP Engineering team from one of our upstream ISP called to report a problem with some of their routes being leaked again due to a misconfiguration on our end. Update 2018/06/13: Pb solved: Junior Net Engineer Mike D. was terminated yesterday. Updated: 2018/06/15: CastCom. still reporting issues with 3 networks: 10.120.15,10.120.16,10.120.17/24's, one of their VIP is having issues connecting by FTP to an important server in the 10.120.15.0/24 network, investigating... Updated 2018/06/16: No prbl. found, suspect they had stuck routes after the leak and cleared them manually.
+Rx / CastCom. IP Engineering team from one of our upstream ISP called to report a 
+problem with some of their routes being leaked again due to a misconfiguration on our 
+end. Update 2018/06/13: Pb solved: Junior Net Engineer Mike D. was terminated yesterday.
+Updated: 2018/06/15: CastCom. still reporting issues with 3 networks: 10.120.15,
+10.120.16,10.120.17/24's, one of their VIP is having issues connecting by FTP to an 
+important server in the 10.120.15.0/24 network, investigating... Updated 2018/06/16: No 
+prbl. found, suspect they had stuck routes after the leak and cleared them manually.
 ```
 
 ## Root
